# Music-Player-GUI

./: AppIcon.icns  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  create_ico.py
.cache/clangd/index/: AudioEngine.cpp.9CEEC108E16A0104.idx  AudioEngine.h.F32407DB98634103.idx  GUI.cpp.A148C03022C15FEF.idx  GUI.h.B4780CDA2F882F23.idx  PlaylistDLL.h.373E91068CA07AFD.idx  SongTrie.h.8FE7D482B3932D53.idx  imconfig.h.6ABB903A0B6F59FD.idx  imgui.cpp.51A990FF72C9DAA6.idx  imgui.h.3E2E9BB17089BD92.idx  imgui_demo.cpp.19A76ABDFDD8603E.idx  imgui_draw.cpp.6B8ED67B362144EB.idx  imgui_impl_sdl2.cpp.D5E55B20985F3477.idx  imgui_impl_sdl2.h.11909F7923EA1495.idx  imgui_impl_sdlrenderer2.cpp.F8C47029CCCD0115.idx  imgui_impl_sdlrenderer2.h.C8C1436154325A9A.idx  imgui_internal.h.94A325529C7471C9.idx  imgui_tables.cpp.DC85F5656D09869D.idx  imgui_widgets.cpp.D4E01FBF58D91110.idx  imstb_rectpack.h.793E7E1B41055FE1.idx  imstb_textedit.h.663D7DB3468E871F.idx  imstb_truetype.h.DB7A754C51DC0459.idx  main.cpp.947956AFB18BF1C0.idx  miniaudio.h.1D3B2FDBAF00C8E5.idx
MusicPlayer.app/Contents/: Info.plist
src/: AudioEngine.cpp  AudioEngine.h  GUI.cpp  GUI.h  PlaylistDLL.h  SongTrie.h  main.cpp
